--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,97 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
+/* Global ------------------------------------------------------ */
+
+html {
+  overflow: hidden; /*FF fix*/
+  height: 100%;
+  font-family: Geneva, sans-serif;
+  background: hsl(210, 30%, 0%) radial-gradient( hsl(210, 30%, 20%), hsl(210, 30%, 0%));
 }
 
-html, body {
+body {
   margin: 0;
-  border: 0;
-  padding: 0;
-  background-color: #fff;
-}
-
-main {
-  margin: auto;
-  width: 50%;
-  padding: 20px;
-}
-
-main > h1 {
+  width: 100%;
+  height: 100%;
   text-align: center;
-  font-size: 3.5em;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+p {
+    margin: 0;
+}
+
+
+/* box ------------------------------------------------------ */
+
+#box {
+  padding: 100px;
+  text-align: center;
+  min-width: 500px;
+  font-size: 3em;
+  font-weight: bold;
+  -webkit-backface-visibility: hidden; /* fixes flashing */
+}
+
+
+/* flashlight ------------------------------------------------------ */
+
+#flashlight {
+  color: hsla(0,0%,0%,0);
+  perspective: 80px;
+  outline: none;
+}
+
+
+/* flash ------------------------------------------------------ */
+
+#flash {
+  display: inline-block;
+  text-shadow: #bbb 0 0 1px, #fff 0 -1px 2px, #fff 0 -3px 2px, rgba(0,0,0,0.8) 0 30px 25px;
+  transition: margin-left 0.3s cubic-bezier(0, 1, 0, 1);
+}
+    
+#box:hover #flash {
+  margin-left: 20px;
+  transition: margin-left 1s cubic-bezier(0, 0.75, 0, 1);
+}
+
+
+/* light ------------------------------------------------------ */
+
+#light {
+  display: inline-block;
+  text-shadow: #111 0 0 1px, rgba(255,255,255,0.1) 0 1px 3px;
+}
+
+#box:hover #light {
+  text-shadow: #fff 0 0 4px, #fcffbb 0 0 20px;
+  transform: rotateY(-60deg);
+  transition:         transform 0.3s cubic-bezier(0, 0.75, 0, 1), text-shadow 0.1s ease-out;
+}
+#container{
+  color: white;
+  width: 930px;
+  margin: 1%;
+  padding: 1%;
+}
+#column{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: black;
+  text-shadow: 0px 15px 5px rgba(0,0,0,0.1),
+                 10px 20px 5px rgba(0,0,0,0.05),
+                 -10px 20px 5px rgba(0,0,0,0.05);
+  background-color: whitesmoke;
+  border-radius: 25px;
+  box-shadow: 0 3px 10px white;
+  text-align: center;
+  height: 300px;
+  width: 300px;
+  float: left;
+  margin-left: 10px;
+  position: relative;
+}
+.center {
+  text-align: center;
 }
